[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/diag-box.png" type="Texture" id=1]
[ext_resource path="res://assets/diag-box-next.png" type="Texture" id=2]
[ext_resource path="res://scripts/DiagBox.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/PX Sans Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Voicebox.tscn" type="PackedScene" id=5]
[ext_resource path="res://materials/diagbox-normal.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
extra_spacing_space = -1
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -90 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 298 ), Vector2( 0, 208 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DiagBox:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 260 ), Vector2( 35, 170 ) ]
}

[node name="DiagBox" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = -90.0
margin_bottom = -58.0
color = Color( 0.00784314, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
margin_top = 298.0
margin_right = 3.05176e-05
margin_bottom = 330.001
color = Color( 0.00784314, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiagBox" type="TextureRect" parent="."]
margin_left = 35.0
margin_top = 260.0
margin_right = 323.0
margin_bottom = 320.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DiagBox"]
margin_left = 36.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 20.0
rect_clip_content = true
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lorem"
align = 1
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DiagBox"]
margin_left = 31.0
margin_top = 19.0
margin_right = 250.0
margin_bottom = 53.0
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "lorem ipsum dolor sit amet"
text = "lorem ipsum dolor sit amet"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureRect" parent="DiagBox"]
margin_left = 250.655
margin_top = 29.2182
margin_right = 263.655
margin_bottom = 43.2182
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade-in = SubResource( 2 )

[node name="next_char" type="Timer" parent="."]

[node name="Voicebox" parent="." instance=ExtResource( 5 )]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
